--- a/src/views/home/HomeView.less
+++ b/src/views/home/HomeView.less
@@ -1,3 +1,8 @@
-.test {
-  font-size: 39px;
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
 }
