--- a/src/views/search/SearchView.less
+++ b/src/views/search/SearchView.less
@@ -1,6 +1,58 @@
 .search-view {
   position: absolute;
   inset: 0;
-  background-color: #fff;
+  background-color: white;
   z-index: 999;
+
+  &__history {
+    padding: var(--van-padding-sm);
+    .label {
+      margin-bottom: var(--van-padding-xs);
+    }
+    .history-tag {
+      display: inline-block;
+      font-size: 12px;
+      border-radius: 10px;
+      color: var(--van-gray-6);
+      background: var(--van-gray-1);
+      padding: 4px 8px;
+      margin-right: 10px;
+      margin-bottom: var(--van-padding-xs);
+    }
+  }
+
+  &__result {
+    .result-item {
+      display: flex;
+      align-items: center;
+      font-size: 12px;
+      padding: 10px;
+      border-radius: 1px solid var(--van-gray-1);
+      .name {
+        flex: 1;
+        padding-left: 6px;
+      }
+      .count {
+        font-size: 12px;
+        color: var(--van-gray-6);
+      }
+    }
+    .no-result,
+    .searching {
+      font-size: 12px;
+      padding: 100px 0;
+      text-align: center;
+      color: var(--van-gray-6);
+    }
+  }
+}
+
+.list-enter-active,
+.list-leave-active {
+  transition: all 1s ease;
+}
+.list-enter-from,
+.list-leave-to {
+  opacity: 0;
+  transform: translateY(30px);
 }
