feat: 倒计时组件完成

--- a/src/views/home/HomeView.less
+++ b/src/views/home/HomeView.less
@@ -6,3 +6,12 @@
 .fade-leave-to {
   opacity: 0;
 }
+
+.home-page {
+  &__activity {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px;
+  }
+}
